# VisualFlow

./: .gitignore  Cargo.toml
src/: main.rs
src/filesystem/: mod.rs
src/project/: mod.rs
src/ui/: center_panel.rs  file_operations.rs  layout.rs  left_panel.rs  menu_bar.rs  mod.rs  right_panel.rs  syntax_highlighting.rs
src/ui/dialogs/: delete_dialog.rs  mod.rs  properties_dialog.rs
src/window_editor/: mod.rs  node_operations.rs  widget_library.rs
visual_flow_canvas/: LICENSE  compiler.rs  mod.rs  plugin.toml
visual_flow_canvas/nodes/: Flow.nhd  Flow.vfnode  IO.nhd  IO.vfnode  Math.nhd  Math.vfnode
