[package]
name = "egui_code_generator"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.29"
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "persistence"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syntect = "5.1"

# You can optionally enable tracing for egui: 
# tracing-subscriber = { version = "0.3", features = ["env-filter"] }
